metadata/force-app/main/default/objects/Product_Rules__c/Product_Rules__c.object-meta.xml
<CustomObject>
    <description>Used to capture the rules associated with products.</description>
    <label>Product Rules</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Product Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>