metadata/force-app/main/default/objects/Product_Rules__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to specify if a product rule is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>