metadata/force-app/main/default/objects/Product_Rules__c/fields/Dependant_Product__c.field-meta.xml
<CustomField>
    <fullName>Dependant_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store the dependant product related to the parent product</description>
    <label>Dependant Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Rules (Dependant Product)</relationshipLabel>
    <relationshipName>Dependant_Product_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>