metadata/force-app/main/default/objects/Product_Rules__c/fields/Dependant_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependant_Product_Type__c</fullName>
    <label>Dependant Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>