metadata/force-app/main/default/objects/Product_Rules__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store the parent product the product rule is associated to.</description>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Rules (Parent Product)</relationshipLabel>
    <relationshipName>Product_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>